[package]
name = "rav1e-by-gop"
version = "0.1.0"
authors = ["Josh Holmer <jholmer.in@gmail.com>"]
edition = "2018"
license = "MIT"
description = "A tool to parallel encode GOP segments of a video with rav1e"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
av-scenechange = { version = "0.2", default-features = false }
clap = "2"
err-derive = "0.2"
ivf = "0.1"
num_cpus = "1"
rav1e = { git = "https://github.com/xiph/rav1e", default-features = false, features = ["asm"] }
termion = "1"
threadpool = "1"
y4m = "0.5"

[profile.release]
codegen-units = 1
lto = true
