[package]
name = "rav1e-by-gop"
version = "0.5.0"
authors = ["Josh Holmer <jholmer.in@gmail.com>"]
edition = "2018"
license = "MIT"
description = "A tool to parallel encode GOP segments of a video with rav1e"
autobins = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
anyhow = "1.0"
arrayvec = "0.5"
av-scenechange = { git = "https://github.com/rust-av/av-scenechange", default-features = false, features = [ "serde" ], optional = true }
bincode = "1.3"
chrono = { version = "0.4.19", features = ["serde"] }
clap = { version = "2", optional = true }
console = { version = "0.14.0", optional = true }
crossbeam-channel = "0.5"
crossbeam-utils = { version = "0.8", optional = true }
dialoguer = { version = "0.7", optional = true }
env_logger = { version = "0.8.1", optional = true }
http = { version = "0.2", optional = true }
indicatif = { version = "0.15", optional = true }
itertools = { version = "0.10", optional = true }
ivf = "0.1"
lazy_static = { version = "1.0", optional = true }
log = "0.4"
num_cpus = { version = "1", optional = true }
parking_lot = { version = "0.11", optional = true }
rav1e = { git = "https://github.com/xiph/rav1e", default-features = false, features = ["asm", "serialize", "unstable"] }
rayon = "1.5"
reqwest = { version = "0.10", features = ["blocking", "json"], optional = true }
rmp-serde = { version = "0.15", optional = true }
semver = { version = "0.11", features = ["serde"], optional = true }
serde = { version = "1", features = ["derive"] }
systemstat = { git = "https://github.com/myfreeweb/systemstat" }
thiserror = { version = "1", optional = true }
threadpool = "1"
toml = { version = "0.5", optional = true }
url = { version = "2.2", optional = true }
uuid = { version = "0.8", features = ["serde"], optional = true }
v_frame = { version = "0.1", features = ["serialize"] }
y4m = { version = "0.7", optional = true }
zstd = "0.5"

[target.'cfg(all(target_arch = "x86_64", target_os = "linux"))'.dependencies]
jemallocator = "0.3.2"

[[bin]]
name = "rav1e-by-gop"
required-features = ["binary"]
bench = false

[features]
default = ["binary", "remote"]
binary = [
    "av-scenechange",
    "clap",
    "console",
    "crossbeam-utils",
    "dialoguer",
    "env_logger",
    "indicatif",
    "itertools",
    "num_cpus",
    "parking_lot",
    "rmp-serde",
    "thiserror",
    "y4m"
]
remote = ["http", "lazy_static", "reqwest", "semver", "toml", "url", "uuid"]

