[package]
name = "rav1e-worker"
version = "0.4.0"
authors = ["Josh Holmer <jholmer.in@gmail.com>"]
edition = "2018"
license = "MIT"
description = "A server to enable distributed encoding with rav1e-by-gop"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
anyhow = "1"
bincode = "1.3"
bcrypt = "0.8"
chrono = "0.4"
clap = "2"
crossbeam-channel = "0.5"
crossbeam-utils = "0.8"
env_logger = "0.7"
http = "0.2"
itertools = "0.9"
lazy_static = "1.4.0"
log = "0.4"
native-tls = "0.2"
num_cpus = "1"
parking_lot = "0.11"
rav1e = { git = "https://github.com/xiph/rav1e", default-features = false, features = ["asm", "serialize"] }
rav1e-by-gop = { path = "../rav1e-by-gop", default-features = false }
rayon = "1.3"
rmp-serde = "0.14"
semver = "0.11"
serde = { version = "1", features = ["derive"] }
threadpool = "1"
tungstenite = "0.11"
uuid = { version = "0.8", features = ["v4", "serde"] }
v_frame = { version = "0.1", features = ["serialize"] }
zstd = "0.5"

[target.'cfg(all(target_arch = "x86_64", target_os = "linux"))'.dependencies]
jemallocator = "0.3.2"
