[package]
name = "rav1e-worker"
version = "0.5.0"
authors = ["Josh Holmer <jholmer.in@gmail.com>"]
edition = "2018"
license = "MIT"
description = "A server to enable distributed encoding with rav1e-by-gop"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
anyhow = "1"
bincode = "1.3"
bcrypt = "0.9"
byteorder = "1.4.2"
bytes = "1.0.1"
chrono = "0.4"
clap = "2"
crossbeam-channel = "0.5"
env_logger = "0.8"
http = "0.2"
itertools = "0.10"
lazy_static = "1.4.0"
log = "0.4"
num_cpus = "1"
parking_lot = "0.11"
rand = "0.8.3"
rav1e = { git = "https://github.com/xiph/rav1e", default-features = false, features = ["asm", "serialize"] }
rav1e-by-gop = { path = "../rav1e-by-gop", default-features = false, features = ["remote"] }
rayon = "1.5"
semver = "0.11"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.59"
tokio = { version = "1.2", features = ["rt-multi-thread", "macros", "time"] }
uuid = { version = "0.8", features = ["v1", "serde"] }
v_frame = { version = "0.2", features = ["serialize"] }
warp = "0.3"
zstd = "0.6"

[target.'cfg(all(target_arch = "x86_64", target_os = "linux"))'.dependencies]
jemallocator = { version = "0.3.2", features = ["background_threads"] }

[features]
default = ["tls"]
tls = ["warp/tls"]
